--- a/index.html
+++ b/index.html
@@ -3,21 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
 
-  <figure>
+<header role="banner">header</header>
+<nav role="navigation">nav</nav>
+<aside role="columnheader"></aside>
+<main role="main">Main</main>
+<footer role="contentinfo"></footer>
+
+
+  <!-- <figure>
     <img src="images/image-qr-code.png" alt="">
     <figcaption class="h1">Improve your front-end skills by building projects</figcaption>
     <figcaption class="h2">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</figcaption>
   </figure>
-
-  <div class="attribution">
+ -->
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
