--- a/index.html
+++ b/index.html
@@ -10,22 +10,24 @@
 </head>
 <body>
 
-<header role="banner">header</header>
-<nav role="navigation">nav</nav>
-<aside role="columnheader"></aside>
-<main role="main">Main</main>
-<footer role="contentinfo"></footer>
+<header role="banner" id="header">
+  <p class="header__pLogo"></p>
+  <nav role="navigation" id="nav"></nav>
+</header>
 
+<main role="main" id="main">
+  <div class="divCard">
+    <img class="divCard__image" src="images/image-qr-code.png" alt="QR code for FrontedMentor">
+    <h1 class="divCard__h1">Improve your front-end skills by building projects</h1>
+    <h2 class="divCard__h2">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</h2>
+  </div>
 
-  <!-- <figure>
-    <img src="images/image-qr-code.png" alt="">
-    <figcaption class="h1">Improve your front-end skills by building projects</figcaption>
-    <figcaption class="h2">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</figcaption>
-  </figure>
- -->
-  <!-- <div class="attribution">
+  <div class="attribution" role="contentinfo">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+    Coded by <a href="https://main--malavez890-qr-code-component.netlify.app/">malavez</a>.
+  </div>
+</main>
+
+<footer role="contentinfo" id="footer"></footer>
 </body>
 </html>
